--- a/app/src/main/res/layout/activity_patient_page_update.xml
+++ b/app/src/main/res/layout/activity_patient_page_update.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="60dp"
-                android:contentDescription="TODO"
+                android:contentDescription="@string/todo"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/menu_button" />
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="152dp"
                 android:fontFamily="@font/poppins_bold"
-                android:text="Patient Profile"
+                android:text="@string/patient_profile"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -57,7 +57,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginStart="21dp"
                 android:layout_marginBottom="2dp"
-                android:contentDescription="TODO"
+                android:contentDescription="@string/todo"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/medicalDiagnosticsTitleTextView"
                 app:srcCompat="@drawable/profile_avatar_women" />
@@ -86,7 +86,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-black"
-            android:text="First name"
+            android:text="@string/first_name"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -99,7 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
-            android:text="Marilyn"
+            android:text="@string/marilyn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -117,7 +117,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-black"
-            android:text="Middle Name"
+            android:text="@string/middle_name"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -129,7 +129,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
-            android:text="None"
+            android:text="@string/none"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -147,7 +147,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-black"
-            android:text="Last Name"
+            android:text="@string/last_name"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -161,7 +161,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
             android:inputType="textMultiLine"
-            android:text="Bvarton"
+            android:text="@string/bvarton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
@@ -177,7 +177,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-black"
-            android:text="Date of Birth"
+            android:text="@string/date_of_birth"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -189,7 +189,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
-            android:text="6/5/1980"
+            android:text="@string/_6_5_1980"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/dateOfBirth" />
 
@@ -205,7 +205,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-black"
-            android:text="Medicare no"
+            android:text="@string/medicare_no"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -218,7 +218,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
             android:inputType="textMultiLine"
-            android:text="5065521796"
+            android:text="@string/_5065521796"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView131" />
 
@@ -234,7 +234,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-black"
-            android:text="Western Affairs no"
+            android:text="@string/western_affairs_no"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -247,7 +247,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
             android:backgroundTint="#ECECEC"
-            android:text="L67M8OB004HQ"
+            android:text="@string/l67m8ob004hq"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView61" />
 
@@ -266,7 +266,7 @@
             android:layout_marginBottom="10dp"
             android:backgroundTint="#3297C3"
             android:fontFamily="@font/poppins_bold"
-            android:text="More info"
+            android:text="@string/more_info"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
