--- a/app/src/main/res/layout/activity_caretaker_dashboard.xml
+++ b/app/src/main/res/layout/activity_caretaker_dashboard.xml
@@ -41,7 +41,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="54dp"
-                    android:contentDescription="TODO"
+                    android:contentDescription="@string/todo"
                     app:layout_constraintBottom_toTopOf="@+id/medicalDiagnosticsTitleTextView"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.498"
@@ -56,7 +56,7 @@
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="68dp"
                     android:onClick="onNotificationsClick"
-                    android:text="Test: Notifications"
+                    android:text="@string/test_notifications"
                     android:textSize="10sp"
                     app:layout_constraintBottom_toBottomOf="@+id/headerGuardiansLogo"
                     app:layout_constraintEnd_toEndOf="parent" />
@@ -67,7 +67,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:onClick="onHealthDataClick"
-                    android:text="TEST: health data"
+                    android:text="@string/test_health_data"
                     android:textSize="10sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.922"
@@ -82,7 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="68dp"
             android:onClick="onSelectAPatientClick"
-            android:text="Select a Patient"
+            android:text="@string/select_a_patient"
             android:textColor="#2B86AC"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
