--- a/app/src/main/res/layout/activity_confirm_false_alert.xml
+++ b/app/src/main/res/layout/activity_confirm_false_alert.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:backgroundTint="@color/TG_blue"
-        android:text="Submit"
+        android:text="@string/submit"
         android:textColor="@color/white"
         android:textStyle="normal|bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="180dp"
             android:layout_marginTop="40dp"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/todo"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/gopher_logo" />
 
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="50dp"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/todo"
             app:srcCompat="@drawable/menu_button" />
 
         <ImageView
@@ -56,7 +56,7 @@
             android:layout_height="51dp"
             android:layout_marginLeft="330dp"
             android:layout_marginTop="45dp"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/todo"
             app:srcCompat="@drawable/profile_avatar_women" />
 
         <TextView
@@ -84,7 +84,7 @@
             android:layout_marginLeft="130dp"
             android:layout_marginTop="100dp"
             android:fontFamily="sans-serif"
-            android:text="Confirm Incident"
+            android:text="@string/confirm_incident"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
 
@@ -95,7 +95,7 @@
         android:layout_width="match_parent"
         android:layout_height="82dp"
         android:layout_marginTop="-45dp"
-        android:contentDescription="TODO"
+        android:contentDescription="@string/todo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,7 +108,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
         android:fontFamily="@font/poppins_bold"
-        android:text="!  Alert"
+        android:text="@string/alert"
         android:textColor="@android:color/holo_green_light"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView9"
@@ -121,7 +121,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:text="Recorded time: 09:49 AM"
+        android:text="@string/recorded_time_09_49_am"
         android:textSize="10sp"
         app:layout_constraintStart_toEndOf="@+id/textView30"
         app:layout_constraintTop_toTopOf="@+id/imageView9" />
@@ -146,7 +146,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-black"
-            android:text="Benjamin Hogan is seemingly unconscious"
+            android:text="@string/benjamin_hogan_is_seemingly_unconscious"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -182,7 +182,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/todo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -204,7 +204,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:text="Verification time: 09:49 AM"
+            android:text="@string/verification_time_09_49_am"
             android:textSize="10sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -224,14 +224,14 @@
                 android:id="@+id/radioButton11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Quick Message"
+                android:text="@string/quick_message"
                 android:textSize="10sp" />
 
             <RadioButton
                 android:id="@+id/radioButton12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Provide a Manual Input"
+                android:text="@string/provide_a_manual_input"
                 android:textSize="10sp" />
 
             <TextView
@@ -240,7 +240,7 @@
                 android:layout_height="51dp"
                 android:layout_marginTop="5dp"
                 android:background="@drawable/gray_border_rectangle"
-                android:hint="Add your input here.."
+                android:hint="@string/add_your_input_here"
                 android:textIsSelectable="true"
                 android:textSize="9sp" />
 
@@ -253,7 +253,7 @@
         android:layout_width="136dp"
         android:layout_height="45dp"
         android:layout_marginBottom="16dp"
-        android:text="Cancel"
+        android:text="@string/cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.181"
