--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
             android:height="60dp"
             android:backgroundTint="@color/TG_blue"
             android:fontFamily="@font/poppins_bold"
-            android:text="Get started"
+            android:text="@string/get_started"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -33,7 +33,7 @@
             android:layout_marginEnd="8dp"
             android:backgroundTint="@color/TG_blue"
             android:onClick="logout"
-            android:text="Logout"
+            android:text="@string/logout"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
             android:layout_marginStart="64dp"
             android:layout_marginTop="28dp"
             android:layout_marginEnd="64dp"
-            android:text="Lorem ipsum dolor sit amet"
+            android:text="@string/lorem_ipsum_dolor_sit_amet"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +76,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:fontFamily="@font/poppins_bold"
-                    android:text="Welcome to Patient checker"
+                    android:text="@string/welcome_to_patient_checker"
                     android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
-                    android:contentDescription="TODO"
+                    android:contentDescription="@string/todo"
                     app:layout_constraintBottom_toTopOf="@+id/medicalDiagnosticsTitleTextView"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -102,7 +102,7 @@
             android:layout_width="123dp"
             android:layout_height="125dp"
             android:layout_marginTop="24dp"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/todo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView"
@@ -112,7 +112,7 @@
             android:id="@+id/headerMenuIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/todo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@drawable/shapes1" />
