--- a/app/src/main/res/layout/activity_medical_diagnostics.xml
+++ b/app/src/main/res/layout/activity_medical_diagnostics.xml
@@ -29,7 +29,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/poppins_bold"
-                    android:text="Health Details"
+                    android:text="@string/health_details"
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +41,7 @@
                     android:id="@+id/medicalDiagnosticsHeaderImageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:contentDescription="TODO"
+                    android:contentDescription="@string/todo"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.498"
@@ -83,7 +83,7 @@
                         android:layout_height="match_parent"
                         android:fontFamily="@font/poppins_bold"
                         android:gravity="center"
-                        android:text="Medical Diagnostics"
+                        android:text="@string/medical_diagnostics"
                         android:textColor="@color/black"
                         android:textSize="16sp"
                         tools:layout_editor_absoluteX="132dp"
@@ -95,7 +95,7 @@
                         android:layout_height="35dp"
                         android:layout_marginLeft="15dp"
                         android:baselineAlignBottom="false"
-                        android:contentDescription="TODO"
+                        android:contentDescription="@string/todo"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.789"
                         app:layout_constraintStart_toStartOf="parent"
