--- a/app/src/main/res/layout/activity_patient_dashboard.xml
+++ b/app/src/main/res/layout/activity_patient_dashboard.xml
@@ -14,7 +14,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="48dp"
             android:background="@color/white"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/todo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/patientDataButton"
             app:srcCompat="@drawable/daily_report" />
@@ -26,7 +26,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="48dp"
             android:background="@color/white"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/todo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/selectAPatientTextView"
             app:srcCompat="@drawable/patient_data" />
@@ -38,7 +38,7 @@
             android:layout_marginTop="48dp"
             android:layout_marginEnd="24dp"
             android:background="@color/white"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/todo"
             android:onClick="onCarePlanClick"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/selectAPatientTextView"
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="48dp"
             android:background="@color/white"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/todo"
             android:onClick="onHealthDataClick"
             app:layout_constraintEnd_toStartOf="@+id/carePlanButton"
             app:layout_constraintStart_toEndOf="@+id/patientDataButton"
@@ -63,7 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="48dp"
             android:background="@color/white"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/todo"
             app:layout_constraintEnd_toStartOf="@+id/associateRadarButton"
             app:layout_constraintHorizontal_bias="0.49"
             app:layout_constraintStart_toEndOf="@+id/dailyReportButton"
@@ -77,7 +77,7 @@
             android:layout_marginTop="48dp"
             android:layout_marginEnd="24dp"
             android:background="@color/white"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/todo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/carePlanButton"
             app:srcCompat="@drawable/associate_radar" />
@@ -103,7 +103,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:fontFamily="@font/poppins_bold"
-                    android:text="Patient **patient_name**"
+                    android:text="@string/patient_patient_name"
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -116,7 +116,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="100dp"
                     android:layout_marginTop="54dp"
-                    android:contentDescription="TODO"
+                    android:contentDescription="@string/todo"
                     app:layout_constraintBottom_toTopOf="@+id/medicalDiagnosticsTitleTextView"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.498"
@@ -144,7 +144,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
             android:onClick="onMedicalDiagnosticsClick"
-            android:text="Test: Medical Diagnostics"
+            android:text="@string/test_medical_diagnostics"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
@@ -155,7 +155,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onNavigationDrawerClick"
-            android:text="Test: Side Menu"
+            android:text="@string/test_side_menu"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
